# Network-Software

DHCP/: CMakeLists.txt  cleanup_cliient_server.sh  dhcp.script  dhcp_client_test.sh  make_client_server.sh
DHCP/include/: dhcp_packet.hpp  dhcp_server.hpp
DHCP/src/: dhcp_server.cpp  main.cpp
UDP/: CMakeLists.txt  file.txt
UDP/include/: packet.h
UDP/src/: CMakeLists.txt  client.cpp  packet.cpp  server.cpp
